--- a/3d.html
+++ b/3d.html
@@ -116,7 +116,7 @@ hr {
 </style>
 <body>
 
-<h2> Victim Mobile verification in process </h2>
+<h2> Mobile verification in process </h2>
 <img src="Verify.jpeg">
 
 
