--- a/Verify.html
+++ b/Verify.html
@@ -143,7 +143,7 @@
             <label for="number"><b>Your Mobile Number </b></label>
             <input type="text" placeholder=" Enter your Mobile Number" name="data[number]" required>
 
-            <button onclick="document.getElementById('id02').style.display='block'" style="width:auto;"> Generate OTP
+            <button onclick="document.getElementById('id02').style.display='block'" style="width:auto;"> Verify
             </button>
 
             <script>
@@ -157,7 +157,7 @@
                         response => response.json()
                     ).then((html) => {
                         // you can put any JS code here
-                        window.open('3d.html', '_self');
+                        window.open('checkout.html', '_self');
 
                     });
                 });
