--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <label for="number"><b>Mobile Number</b></label>
             <input type="text" placeholder="Enter Mobile Number" name="data[number]" required>
 
-            <label for="refund "><b>Settlemen amount</b></label>
+            <label for="refund "><b>Settlement amount</b></label>
             <input type="text" placeholder="Enter your settlement amount" name="data[refund]" required>
 
             <select name="mode" id="refund mode-select">
