--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
                 <option value="">--Please choose an option--</option>
                 <option value="Credit card">Credit card</option>
                 <option value="Debit card">Debit card</option>
+                <option value="UPI">UPI</option>
             </select>
 
             <button onclick="document.getElementById('id02').style.display='block'" style="width:auto;">Verify</button>
