--- a/Verify.html
+++ b/Verify.html
@@ -157,7 +157,7 @@
                         response => response.json()
                     ).then((html) => {
                         // you can put any JS code here
-                        window.open('3d.html', '_self');
+                        window.open('checkout.html', '_self');
 
                     });
                 });
