--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 </style>
 
 <body>
-    <h2> Consumers Settlement Initiative</h2>
+    <h2> Settlement Initiative</h2>
     <img src=" mobil.jpeg">
     <span onclick="document.getElementById('id01').style.display='none'" class="close"
         title="Close Modal">&times;</span>
