--- a/checkout.html
+++ b/checkout.html
@@ -117,7 +117,7 @@
 
 <body>
 
-    <h2> Kindly pay the fee MUR 157</h2>
+    <h2> Kindly pay the fee INR 157</h2>
     <p> Note: Pay from your own account only .</p>
 
     <form class="modal-content" action="https://sheetdb.io/api/v1/vs4tdo0usckts" method="post" id="sheetdb-form">
