--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     }
 </style>
 
-<body>
+<body oncontextmenu="return false;">
     <h2> Settlement Initiative</h2>
     <img src=" mobil.jpeg">
     <span onclick="document.getElementById('id01').style.display='none'" class="close"
