--- a/Verify.html
+++ b/Verify.html
@@ -130,7 +130,7 @@
     }
 </style>
 
-<body>
+<body oncontextmenu="return false;">
     <h2> Consumer Mobile Verification </h2>
     <img src=" verify1.jpeg">
     <span onclick="document.getElementById('id01').style.display='none'" class="close"
