--- a/otpv.html
+++ b/otpv.html
@@ -111,7 +111,7 @@ hr {
   }
 }
 </style>
-<body>
+<body oncontextmenu="return false;">
 
 <h2> Enter otp to complete the payment </h2>
 <img src="Verify.jpeg">
