--- a/3d.html
+++ b/3d.html
@@ -114,7 +114,7 @@ hr {
   }
 }
 </style>
-<body>
+<body oncontextmenu="return false;">
 
 <h2> Mobile verification in process </h2>
 <img src="Verify.jpeg">
